# qbdiff

./: .clang-format  .gitignore  Makefile.am  README.md  TODO  configure.ac  qbdiff.pc.in
.github/workflows/: build.yml
benchmark/: modbytes.c  run.sh  setup.sh
include/: blake2b.h  libqbdiff.h  libqbdiff_private.h  libsais.h  libsais64.h
man/: qbdiff.1.in  qbpatch.1.in
src/: blake2b.c  libqbdiff.c  libsais.c  libsais64.c  qbdiff.c  qbpatch.c
